<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.maddie.threadmanagement.MainActivity">
    <item
        android:id="@+id/in_stock_list"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/in_stock_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shopping_list"
        android:icon="@drawable/baseline_bookmark_border_24"
        android:title="@string/shopping_list_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/low_stock_list"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/low_stock_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/info_screen"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/information_menu_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>